# workflow

./: .gitignore
source/activities/python/db_mysql/: connect.py  query.py
source/automation/: readme.md
source/automation/UI自动化/: UI自动化.sln
source/automation/UI自动化/GRPCCommon/: GRPCCommon.csproj  GRPCCommonTools.cs
source/automation/UI自动化/GRPCCommon/protos/: NativeMessageService.proto  ProcessCommunication.proto  SelectorService.proto  UIAutomationService.proto  common.proto
source/automation/UI自动化/NativeMessageHost/: ConsoleBackgroundService.cs  ConsoleBackgroundTask.cs  GrpcService.cs  JsonDictionary.cs  NamedPipeBackgroundService.cs  NamedPipeBackgroundTask.cs  NativeMessageHost.csproj  NativeMessageService.cs  Options.cs  Program.cs  ServiceCollectionExtensions.cs  UIAutomation.cs  appsettings.json  nlog.config
source/automation/UI自动化/NativeMessageHost/Handles/: BaseHandle.cs  FindHandle.cs  FromPointHandle.cs  HandleManager.cs  HighlightHandle.cs  HoverHandle.cs  PickUpHandle.cs
source/automation/UI自动化/Test/TestUIAutomation/: Startup.cs  TestUIAutomation.csproj  UnitTest1.cs  UnitTest2.cs  UnitTest3.cs
source/automation/UI自动化/UIAutomation/: Selector.cs  ServiceCollectionExtensions.cs  UIAutomation.cs  UIAutomation.csproj
source/automation/UI自动化/UIAutomation/BrowserExtensions/: BrowserExtension.cs  ChromeExtension.cs  EdgeExtension.cs  ExtensionManager.cs  FirefoxExtension.cs  GrpcNativeMessageClient.cs  NativeMessageClient.cs
source/automation/UI自动化/UIAutomation/Elements/: ElementBase.cs  HTMLElement.cs  WindowElement.cs
source/automation/UI自动化/UIAutomation/Exceptions/: BrowserExtensionException.cs  (+1 more)
source/automation/UI自动化/UIAutomationHost/: Options.cs  Program.cs  UIAutomationHost.csproj  appsettings.json  nlog.config
source/automation/UI自动化/UIAutomationServer/: Options.cs  Program.cs  Server.cs  UIASelectorService.cs  UIAutomationServer.csproj  appsettings.json
source/automation/UI自动化/UI自动化/: Program.cs  UI自动化.csproj
source/automation/UI自动化/WebApplication1/: Program.cs  WebApplication1.csproj
source/automation/UI自动化/WpfApp1/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.csproj
source/automation/browser extension/: manifest.json  readme.md  插件信息写入到注册表.reg
source/automation/browser extension/extension/: manifest.json
source/workflow/: CMakeLists.txt  TextFile1.txt
source/workflow/workflow/: CMakeLists.txt  exportLib.h  exportPython.cpp  logger.cpp  workflow.cpp  workflow.h
source/workflow/workflow/activities/: BaseActivity.cpp  BaseActivity.h  ContainerActivity.cpp  ContainerActivity.h  PythonActivity.cpp  PythonActivity.h  testAcivity.cpp  testAcivity.h
source/workflow/workflow/activities/statements/: ConditionActivity.cpp  ConditionActivity.h
source/workflow/workflow/ast/: CMakeLists.txt  ast.cpp  ast.h  common.h  includeAST.h  variables.cpp  variables.h
source/workflow/workflow/ast/exceptions/: dataTypeException.cpp  dataTypeException.h  errorMessage.h  exception.cpp  exception.h  keyNotFoundException.cpp  keyNotFoundException.h  notImplementedException.cpp  notImplementedException.h  nullReferenceException.cpp  nullReferenceException.h
source/workflow/workflow/ast/executor/: context.h  executeThread.cpp  executeThread.h  executor.cpp  executor.h  moduleStack.cpp  moduleStack.h  variableStack.cpp  variableStack.h
source/workflow/workflow/ast/executors/: context.cpp  context.h  executeThread.cpp  executeThread.h  executor.cpp  executor.h  variableStack.cpp  variableStack.h
source/workflow/workflow/ast/expressions/: binaryOperator.cpp  binaryOperator.h  bool_operate_expression.cpp  call.cpp  call.h  compare.cpp  compare.h  constant.cpp  constant.h  dictionary.cpp  dictionary.h  expression.cpp  expression.h  expressions.h  list.cpp  list.h  lua.cpp  lua.h  name.cpp  name.h  subscript.cpp  subscript.h  value.cpp  value.h
source/workflow/workflow/ast/include/: assign.h  astString.h  binaryOperator.h  bool_operate_expression.h  boolean.h  call.h  common.h  compare.h  condition.h  constant.h  container.h  continue.h  expression.h  expressions.h  float.h  integer.h  null.h  object.h  print.h  return.h  statement.h  statements.h  void.h  while.h
source/workflow/workflow/ast/modules/: functionDefinition.cpp  functionDefinition.h  module.cpp  module.h  modules.h
source/workflow/workflow/ast/statements/: assign.cpp  assign.h  break.cpp  break.h  condition.cpp  condition.h  container.cpp  container.h  continue.cpp  continue.h  for.cpp  for.h  print.cpp  print.h  return.cpp  return.h  statement.cpp  statement.h  statements.h  while.cpp  while.h
source/workflow/workflow/ast/types/: astString.cpp  boolean.cpp  boolean.h  dictionary.cpp  dictionary.h  float.cpp  float.h  integer.cpp  integer.h  list.cpp  list.h  long.cpp  long.h  null.cpp  null.h  object.cpp  object.h  string.cpp  string.h  types.h  void.cpp  void.h
source/workflow/workflow/executor/: ExecuteEnvironment.h  Executor.cpp  Executor.h
source/workflow/workflow/framework/: CMakeLists.txt  pyTools.cpp  pyTools.h  test.cpp  test.h
source/workflow/workflow/framework/activities/: activities.h  activity.cpp  activity.h  pyActivity.cpp  pyActivity.h
source/workflow/workflow/framework/executors/: context.h  executeThread.cpp  executeThread.h  executor.cpp  executor.h
source/workflow/workflow/framework/expressions/: expressions.h  luaExpression.cpp  luaExpression.h  pyExpression.cpp  pyExpression.h  test2.cpp  test2.h
source/workflow/workflow/framework/types/: astPyObject.cpp  astPyObject.h  types.h
source/workflow/workflow/lua/: CMakeLists.txt
source/workflow/workflow/parameters/: Expression.cpp  Expression.h  LuaExpression.cpp  LuaExpression.h  Property.h
source/workflow/workflow/scripts/: aaa.py  activity.py  ast_1.py  custom_activity.py  parameter.py  sayhello.py  test.lua  test1.py
source/workflow/workflow/test/: test1.hpp  test2.hpp  test3.hpp  test4.hpp  test5.hpp
source/workflow/workflow/test/ast/: test1.hpp  test2.hpp  test3.hpp  test4.hpp  test5.hpp
source/workflow/workflow/test/framework/: test1.cpp  test2.cpp
(+29 files in other folders)
