project (ast)
set(CMAKE_CXX_STANDARD 20)

# 项目文件列表
list(APPEND file_list exceptions/exception.cpp)
list(APPEND file_list exceptions/exception.h)
# 执行器
list(APPEND file_list executor/context.h)
list(APPEND file_list executor/executeThread.cpp)
list(APPEND file_list executor/executeThread.h)
list(APPEND file_list executor/executor.cpp)
list(APPEND file_list executor/executor.h)
#list(APPEND file_list executor/moduleStack.cpp)
#list(APPEND file_list executor/moduleStack.h)
list(APPEND file_list executor/variableStack.cpp)
list(APPEND file_list executor/variableStack.h)
# 表达式
list(APPEND file_list expressions/binaryOperator.cpp)
list(APPEND file_list expressions/binaryOperator.h)
list(APPEND file_list expressions/bool_operate_expression.cpp)
list(APPEND file_list expressions/bool_operate_expression.h)
list(APPEND file_list expressions/call.cpp)
list(APPEND file_list expressions/call.h)
list(APPEND file_list expressions/compare.cpp)
list(APPEND file_list expressions/compare.h)
list(APPEND file_list expressions/constant.cpp)
list(APPEND file_list expressions/constant.h)
list(APPEND file_list expressions/expression.cpp)
list(APPEND file_list expressions/expression.h)
list(APPEND file_list expressions/lua.cpp)
list(APPEND file_list expressions/lua.h)
list(APPEND file_list expressions/name.cpp)
list(APPEND file_list expressions/name.h)
# 模块
list(APPEND file_list modules/functionDefinition.cpp)
list(APPEND file_list modules/functionDefinition.h)
list(APPEND file_list modules/module.cpp)
list(APPEND file_list modules/module.h)
# 语句
list(APPEND file_list statements/assign.cpp)
list(APPEND file_list statements/assign.h)
list(APPEND file_list statements/break.cpp)
list(APPEND file_list statements/break.h)
list(APPEND file_list statements/condition.cpp)
list(APPEND file_list statements/condition.h)
list(APPEND file_list statements/container.cpp)
list(APPEND file_list statements/container.h)
list(APPEND file_list statements/continue.cpp)
list(APPEND file_list statements/continue.h)
list(APPEND file_list statements/print.cpp)
list(APPEND file_list statements/print.h)
list(APPEND file_list statements/return.cpp)
list(APPEND file_list statements/return.h)
list(APPEND file_list statements/statement.cpp)
list(APPEND file_list statements/statement.h)
list(APPEND file_list statements/while.cpp)
list(APPEND file_list statements/while.h)
# 数据类型
list(APPEND file_list types/boolean.cpp)
list(APPEND file_list types/boolean.h)
list(APPEND file_list types/float.cpp)
list(APPEND file_list types/float.h)
list(APPEND file_list types/integer.cpp)
list(APPEND file_list types/integer.h)
list(APPEND file_list types/null.cpp)
list(APPEND file_list types/null.h)
list(APPEND file_list types/object.cpp)
list(APPEND file_list types/object.h)
list(APPEND file_list types/string.cpp)
list(APPEND file_list types/string.h)
list(APPEND file_list types/types.h)
list(APPEND file_list types/void.cpp)
list(APPEND file_list types/void.h)
#list(APPEND file_list ast.cpp)
#list(APPEND file_list ast.h)
list(APPEND file_list common.h)

add_library(ast STATIC ${file_list})

#[[
# 添加boost库
find_package(Boost 1.81.0 COMPONENTS regex)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
]]
