cmake_minimum_required (VERSION 3.8)
project(lua)

list(APPEND luasource lapi.c)
list(APPEND luasource lapi.h)
list(APPEND luasource lauxlib.c)
list(APPEND luasource lauxlib.h)
list(APPEND luasource lbaselib.c)
list(APPEND luasource lcode.c)
list(APPEND luasource lcode.h)
list(APPEND luasource lcorolib.c)
list(APPEND luasource lctype.c)
list(APPEND luasource lctype.h)
list(APPEND luasource ldblib.c)
list(APPEND luasource ldebug.c)
list(APPEND luasource ldebug.h)
list(APPEND luasource ldo.c)
list(APPEND luasource ldo.h)
list(APPEND luasource ldump.c)
list(APPEND luasource lfunc.c)
list(APPEND luasource lfunc.h)
list(APPEND luasource lgc.c)
list(APPEND luasource lgc.h)
list(APPEND luasource linit.c)
list(APPEND luasource liolib.c)
list(APPEND luasource ljumptab.h)
list(APPEND luasource llex.c)
list(APPEND luasource llex.h)
list(APPEND luasource llimits.h)
list(APPEND luasource lmathlib.c)
list(APPEND luasource lmem.c)
list(APPEND luasource lmem.h)
list(APPEND luasource loadlib.c)
list(APPEND luasource lobject.c)
list(APPEND luasource lobject.h)
list(APPEND luasource lopcodes.c)
list(APPEND luasource lopcodes.h)
list(APPEND luasource lopnames.h)
list(APPEND luasource loslib.c)
list(APPEND luasource lparser.c)
list(APPEND luasource lparser.h)
list(APPEND luasource lprefix.h)
list(APPEND luasource lstate.c)
list(APPEND luasource lstate.h)
list(APPEND luasource lstring.c)
list(APPEND luasource lstring.h)
list(APPEND luasource lstrlib.c)
list(APPEND luasource ltable.c)
list(APPEND luasource ltable.h)
list(APPEND luasource ltablib.c)
list(APPEND luasource ltm.c)
list(APPEND luasource ltm.h)
#list(APPEND luasource lua.c)
list(APPEND luasource lua.h)
list(APPEND luasource lua.hpp)
list(APPEND luasource luac.c)
list(APPEND luasource luaconf.h)
list(APPEND luasource lualib.h)
list(APPEND luasource lundump.c)
list(APPEND luasource lundump.h)
list(APPEND luasource lutf8lib.c)
list(APPEND luasource lvm.c)
list(APPEND luasource lvm.h)
list(APPEND luasource lzio.c)
list(APPEND luasource lzio.h)

add_library(lua STATIC ${luasource})